fixed 2 errors (spktimeactivated & outlineblock not showing)

--- a/themes/outline.css
+++ b/themes/outline.css
@@ -1,4 +1,4 @@
-div#outlineblock {
+#outlineblock {
     display: grid;
 	font-size: x-small;
     grid-area: outline;
@@ -42,4 +42,8 @@ button.outlineMenu-title {
 .outlineMenu-text {
     text-align: right;
     margin-left: 35%;
+}
+
+#outlineblock.withoutSpeakTime #outlineSpeakTime{
+  display:none;
 }
